feat: Adicionado efeito line-through para marcar tarefas concluídas

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         <div class="container">
             <form id="lista-de-tarefas">
                 <ul>
-                    
+
                 </ul>
             </form>
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="./main.js"></script>
 </body>
 </html>
